Upgraded gulp to v4, fixed security issues

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
         "node": ">= 0.10.0"
     },
     "devDependencies": {
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.2",
         "gulp-env": "~0.2.0",
         "gulp-minify-css": "~1.2.1",
         "gulp-minify-html": "~1.0.4",
         "gulp-rev": "~6.0.1",
         "gulp-rev-collector": "~1.0.2",
         "gulp-rsync": "~0.0.5",
+        "gulp4-run-sequence": "^1.0.1",
         "run-sequence": "~1.1.5"
     },
     "dependencies": {
-        "npm": "^6.13.4"
+        "npm": "^6.13.7"
     }
 }
